fixed the hide-y button and made cheat buttons work, and input works. Also, the input adds a location to the URL and the right city pops up

--- a/vote.css
+++ b/vote.css
@@ -17,8 +17,9 @@ background-color: #EFECCA;
 
 footer{
   margin-left: 25%;
-
-
+}
+#inputButton{
+  visibility: hidden;
 }
 #leftImage{
 width: 400px;
@@ -45,7 +46,6 @@ margin:auto;
 }
 
 #street-view {
-/*display:none  ;*/
 visibility: hidden;
 height: 400px;
 width: 400px;
